--- a/content/AI/3_4.md
+++ b/content/AI/3_4.md
@@ -314,7 +314,7 @@ print(f"Final normalized loss: {final_loss:.6f}")
 ```
 ![sample_with_gradient_descent](/3_4/sample_with_gradient_descent.png)
 
-### 批次訓練(Batch)的概念
+## 批次訓練(Batch)的概念
 + 我們可以在不同的時機點來更新 w 與 b，假設我們的訓練次數為 3000，那 epochs 為3000。且樣本數為 1000。
     + 批次訓練(batch training)，代表的是我們總共做 3000 次的更新，每次都是利用全部 1000 筆樣本算出來的 dw 與 db 去做調整。
     + SGD(Stochastic gradient descent)，代表我們做 3000 * 1000 次的更新，每一個樣本計算出 dw 與 db 就立即去調整。
@@ -462,6 +462,48 @@ for name, model in models.items():
     + 更新頻繁，收斂較快但不穩定
     + 需要較小的學習率
 
+## 損失函數(loss function)
++ 損失函數是用來衡量模型預測值與實際值之間差異的函數，以下是幾個常見的損失函數：
+
+    ### 均方誤差(Mean Squared Error, MSE)
+    + 常用於迴歸問題
+    + 對異常值敏感
+    $$
+        \text{MSE}=\frac{1}{\text{n}}\sum^n(\text{y}_\text{pred}-\text{y} _\text{true})^2
+    $$
+
+    ### 交叉熵損失(Cross Entropy Loss)
+    + 常用於分類問題
+    + 衡量兩個概率分布之間的差異
+    + 又分為二元交叉熵和多類別交叉熵
+        + 二元交叉熵(Binary Cross Entropy)
+        $$
+            \text{BCE}=-(\text{y}_\text{true}\times \log(\text{y} _\text{pred})+(1-\text{y} _\text{true})\times \log(1-\text{y} _\text{pred}))
+        $$
+        + 多類別交叉熵(Categorical Cross Entropy)
+        $$
+            \text{CCE}=-\sum^n((\text{y} _\text{true})_i\times\log((\text{y} _\text{true})_i))
+        $$
+    ### 平均絕對誤差(Mean Absolute Error, MAE)
+    + 用於迴歸問題
+    + 相較 MSE 對異常值不那麼敏感
+    $$
+        \text{MAE}=\frac{1}{\text{n}}\sum^n|\text{y} _\text{pred}-\text{y} _\text{true}|
+    $$
+
+    ### Hinge Loss
+    + 主要用於支持向量機(SVM)
+    + 特別適合最大間隔分類問題
+    $$
+        \text{HL} = \max(0, 1-\text{y} _\text{pred}\times\text{y} _\text{true})
+    $$
+
++ 在選擇損失函數時需考慮
+    1. 問題類型(分類還是迴歸)
+    2. 數據分布特性
+    3. 對異常值的敏感度要求
+    4. 模型的收斂速度要求
+
 ### L1/L2 正則化(L1/L2 Regularization)
 + 在考慮有多個特徵、且帶有 outlier 或雜訊時
 + L1 正則化 (Lasso Regression)
@@ -515,107 +557,83 @@ def generate_synthetic_data(n_samples=100):
     return X, y
 
 class RegularizedRegression:
-    def __init__(self, reg_type=None, lambda_reg=0.1, learning_rate=0.01):
+    def __init__(self, learning_rate=1e-7, reg_type='l2', lambda_reg=0.1):
+        self.w = 0.
+        self.b = 0.
+        self.lr = learning_rate
         self.reg_type = reg_type
         self.lambda_reg = lambda_reg
-        self.lr = learning_rate
-        self.w = None
         self.loss_history = []
-        
-    def fit(self, X, y, epochs=1000):
-        n_features = X.shape[1]
-        self.w = np.zeros(n_features)
-        
-        for epoch in range(epochs):
-            # 預測
-            y_pred = np.dot(X, self.w)
-            
-            # 計算梯度
-            gradient = 2/len(y) * np.dot(X.T, (y_pred - y))
-            
-            # 加入正則化項的梯度
-            if self.reg_type == 'l1':
-                gradient += self.lambda_reg * np.sign(self.w)
-            elif self.reg_type == 'l2':
-                gradient += 2 * self.lambda_reg * self.w
-                
-            # 更新權重
-            self.w -= self.lr * gradient
-            
-            # 記錄損失
-            if epoch % 100 == 0:
-                loss = np.mean((y_pred - y) ** 2)
-                if self.reg_type == 'l1':
-                    loss += self.lambda_reg * np.sum(np.abs(self.w))
-                elif self.reg_type == 'l2':
-                    loss += self.lambda_reg * np.sum(self.w ** 2)
-                self.loss_history.append(loss)
     
     def predict(self, X):
-        return np.dot(X, self.w)
+        return self.w * X + self.b
 
-# 生成數據
-X, y = generate_synthetic_data(n_samples=100)
+    def compute_loss(self, X, y):
+        y_pred = self.predict(X)
+        mse = np.mean((y_pred - y) ** 2)
 
-# 分割訓練集和測試集
-X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)
+        if self.reg_type == 'l1':
+            reg_term = self.lambda_reg * np.abs(self.w)
+        elif self.reg_type == 'l2':
+            reg_term = self.lambda_reg * (self.w ** 2)
+        else:
+            reg_term = 0
+        
+        return mse + reg_term
 
-# 標準化特徵
-scaler = StandardScaler()
-X_train_scaled = scaler.fit_transform(X_train)
-X_test_scaled = scaler.transform(X_test)
+    def compute_gradients(self, X, y):
+        y_pred = self.predict(X)
+        error = y_pred - y
+        
+        # mse 的梯度
+        dw_mse = np.mean(2 * error * X)
+        db = np.mean(2 * error)
 
-# 訓練不同的模型
-models = {
-    'No Regularization': RegularizedRegression(reg_type=None, lambda_reg=0),
-    'L1 (Lasso)': RegularizedRegression(reg_type='l1', lambda_reg=0.1),
-    'L2 (Ridge)': RegularizedRegression(reg_type='l2', lambda_reg=0.1)
-}
+        # 正則化項的梯度
+        if self.reg_type == 'l1':
+            dw_reg = self.lambda_reg * np.sign(self.w)
+        elif self.reg_type == 'l2':
+            dw_reg = self.lambda_reg * 2 * self.w
+        else:
+            dw_reg = 0
+        dw = dw_mse + dw_reg
 
-# 訓練模型
-for name, model in models.items():
-    print(f"\nTraining {name}...")
-    model.fit(X_train_scaled, y_train)
+        return dw, db
 
-# 比較特徵權重
-feature_names = ['Area', 'Age', 'Rooms', 'Noise']
-plt.figure(figsize=(12, 6))
-x = np.arange(len(feature_names))
-width = 0.25
+    def train(self, X, y, epochs=3000):
+        for epoch in range(epochs):
+            dw, db = self.compute_gradients(X, y)
 
-for i, (name, model) in enumerate(models.items()):
-    plt.bar(x + i*width, model.w, width, label=name)
+            self.w -= self.lr * dw
+            self.b -= self.lr * db
 
-plt.xlabel('Features')
-plt.ylabel('Weight')
-plt.title('Feature Weights Comparison')
-plt.xticks(x + width, feature_names)
-plt.legend()
-plt.grid(True)
-plt.show()
-
-# 比較測試集上的表現
-plt.figure(figsize=(12, 6))
-for name, model in models.items():
-    y_pred = model.predict(X_test_scaled)
-    mse = np.mean((y_test - y_pred) ** 2)
-    print(f"\n{name} Test MSE: {mse:.4f}")
-    plt.scatter(y_test, y_pred, label=f'{name} (MSE: {mse:.4f})')
-
-plt.plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], 'k--', lw=2)
-plt.xlabel('True Values')
-plt.ylabel('Predictions')
-plt.title('Prediction vs True Values')
-plt.legend()
-plt.grid(True)
-plt.show()
-
-# 印出每個特徵的權重
-print("\nFeature Weights:")
-for name, model in models.items():
-    print(f"\n{name}:")
-    for fname, w in zip(feature_names, model.w):
-        print(f"{fname}: {w:.4f}")
+    def train(self, X, y, batch_size=None, epochs=3000):
+        n_samples = len(X)
+        if batch_size is None:
+            batch_size = n_samples
+        for epoch in range(epochs):
+            # Shuffle the data
+            indices = np.random.permutation(n_samples)
+            X_shuffled = X[indices]
+            y_shuffled = y[indices]
+            
+            # Mini-batch training
+            for i in range(0, n_samples, batch_size):
+                X_batch = X_shuffled[i:i+batch_size]
+                y_batch = y_shuffled[i:i+batch_size]
+                
+                # Compute gradients using batch data
+                dw, db = self.compute_gradients(X_batch, y_batch)
+                
+                # Update parameters
+                self.w -= self.lr * dw
+                self.b -= self.lr * db
+            
+            # Record loss for the whole dataset
+            if epoch % 100 == 0:
+                loss = self.compute_loss(X, y)
+                self.loss_history.append(loss)
+                print(f"Epoch {epoch}, Loss: {loss:.2f}")
 ```
 
 ![regularization](./3_4/relugarization.png)
@@ -651,3 +669,447 @@ for name, model in models.items():
     4. **使用場景**
     - L1：特徵選擇，當你認為只有部分特徵是重要的
     - L2：處理共線性，當特徵之間有相關性
+
+## 激活函數(activation function)
++ 在設計 model 時，不是所有的問題都可以用線性模型來描述，此時我們就需要
+    1. 多層結構(至少一個隱藏層)
+    2. 非線性激活函數
+    
++ 以下為三個重要的激活函數
+    ![activation](./3_4/Curves-of-the-Sigmoid-Tanh-and-ReLu-activation-functions.png)    
+    1. Sigmoid (σ(x) = 1/(1+e^(-x)))
+        + 輸出範圍：(0,1)
+        + 優點：適合二分類問題
+        + 缺點：容易出現梯度消失
+
+    2. ReLU (max(0,x))
+        + 輸出範圍：[0,∞)
+        + 優點：計算簡單，不會有梯度消失
+        + 缺點：Dead ReLU 問題
+
+    3. Tanh (tanh(x))
+        + 輸出範圍：(-1,1)
+        + 優點：零中心化
+        + 缺點：也有梯度消失問題
+
+```python
+import numpy as np
+import matplotlib.pyplot as plt
+
+class Activation:
+    @staticmethod
+    def sigmoid(x):
+        return 1 / (1 + np.exp(-x))
+
+    @staticmethod
+    def sigmoid_derivative(x):
+        sx = Activation.sigmoid(x)
+        return sx * (1 - sx)
+
+    @staticmethod
+    def relu(x):
+        return np.maximum(0, x)
+    
+    @staticmethod
+    def relu_derivative(x):
+        return np.where(x > 0, 1, 0)
+
+    @staticmethod
+    def tanh(x):
+        return np.tanh(x)
+
+    @staticmethod
+    def tanh_derivative(x):
+        return 1 - np.tanh(x) ** 2
+```
++ 以 `xor` 為例來做以下的機器學習
+```python
+import numpy as np
+import matplotlib.pyplot as plt
+
+class Activation:
+    @staticmethod
+    def sigmoid(x):
+        return 1 / (1 + np.exp(-x))
+    
+    @staticmethod
+    def sigmoid_derivative(x):
+        sx = Activation.sigmoid(x)
+        return sx * (1 - sx)
+    
+    @staticmethod
+    def relu(x):
+        return np.maximum(0, x)
+    
+    @staticmethod
+    def relu_derivative(x):
+        return np.where(x > 0, 1, 0)
+    
+    @staticmethod
+    def tanh(x):
+        return np.tanh(x)
+    
+    @staticmethod
+    def tanh_derivative(x):
+        return 1 - np.tanh(x)**2
+
+class NeuralNetwork:
+    def __init__(self, activation='sigmoid'):
+        # 網絡架構: 2 -> 4 -> 1
+        self.W1 = np.random.randn(2, 4) * 0.1  # 輸入層到隱藏層的權重
+        self.b1 = np.zeros((1, 4))             # 隱藏層偏差
+        self.W2 = np.random.randn(4, 1) * 0.1  # 隱藏層到輸出層的權重
+        self.b2 = np.zeros((1, 1))             # 輸出層偏差
+        
+        # 選擇激活函數
+        if activation == 'sigmoid':
+            self.activation = Activation.sigmoid
+            self.activation_derivative = Activation.sigmoid_derivative
+        elif activation == 'relu':
+            self.activation = Activation.relu
+            self.activation_derivative = Activation.relu_derivative
+        elif activation == 'tanh':
+            self.activation = Activation.tanh
+            self.activation_derivative = Activation.tanh_derivative
+        
+        self.loss_history = []
+    
+    def forward(self, X):
+        # 前向傳播
+        self.z1 = np.dot(X, self.W1) + self.b1
+        self.a1 = self.activation(self.z1)
+        self.z2 = np.dot(self.a1, self.W2) + self.b2
+        self.a2 = self.activation(self.z2)
+        return self.a2
+    
+    def backward(self, X, y, learning_rate=0.1):
+        m = X.shape[0]
+        
+        # 計算梯度
+        dz2 = self.a2 - y
+        dW2 = np.dot(self.a1.T, dz2) / m
+        db2 = np.sum(dz2, axis=0, keepdims=True) / m
+        
+        dz1 = np.dot(dz2, self.W2.T) * self.activation_derivative(self.z1)
+        dW1 = np.dot(X.T, dz1) / m
+        db1 = np.sum(dz1, axis=0, keepdims=True) / m
+        
+        # 更新權重
+        self.W2 -= learning_rate * dW2
+        self.b2 -= learning_rate * db2
+        self.W1 -= learning_rate * dW1
+        self.b1 -= learning_rate * db1
+    
+    def train(self, X, y, epochs=10000, learning_rate=0.1):
+        for epoch in range(epochs):
+            # 前向傳播
+            output = self.forward(X)
+            
+            # 計算損失
+            loss = np.mean((output - y) ** 2)
+            self.loss_history.append(loss)
+            
+            # 反向傳播
+            self.backward(X, y, learning_rate)
+            
+            if epoch % 1000 == 0:
+                print(f"Epoch {epoch}, Loss: {loss:.4f}")
+    
+    def predict(self, X):
+        return np.round(self.forward(X))
+
+# 準備 XOR 數據
+X = np.array([[0,0], [0,1], [1,0], [1,1]])
+y = np.array([[0], [1], [1], [0]])
+
+# 訓練不同激活函數的模型
+activation_functions = ['sigmoid', 'relu', 'tanh']
+models = {}
+
+for activation in activation_functions:
+    print(f"\nTraining with {activation} activation:")
+    model = NeuralNetwork(activation=activation)
+    model.train(X, y)
+    models[activation] = model
+
+# 繪製損失曲線比較
+plt.figure(figsize=(10, 6))
+for activation, model in models.items():
+    plt.plot(model.loss_history, label=activation)
+plt.xlabel('Iteration')
+plt.ylabel('Loss')
+plt.title('Training Loss with Different Activation Functions')
+plt.legend()
+plt.grid(True)
+plt.show()
+
+# 測試預測結果
+print("\nPrediction Results:")
+for activation, model in models.items():
+    print(f"\n{activation} activation:")
+    predictions = model.predict(X)
+    for x, y_true, y_pred in zip(X, y, predictions):
+        print(f"Input: {x}, True: {y_true[0]}, Predicted: {y_pred[0]}")
+
+# 視覺化決策邊界
+plt.figure(figsize=(15, 5))
+for i, (activation, model) in enumerate(models.items()):
+    plt.subplot(1, 3, i+1)
+    
+    # 創建網格點
+    xx, yy = np.meshgrid(np.linspace(-0.5, 1.5, 100),
+                        np.linspace(-0.5, 1.5, 100))
+    grid = np.c_[xx.ravel(), yy.ravel()]
+    
+    # 預測
+    Z = model.predict(grid)
+    Z = Z.reshape(xx.shape)
+    
+    # 繪製決策邊界
+    plt.contourf(xx, yy, Z, alpha=0.4)
+    plt.scatter(X[:, 0], X[:, 1], c=y, s=100)
+    
+    plt.title(f'{activation} Decision Boundary')
+    plt.xlabel('Input 1')
+    plt.ylabel('Input 2')
+
+plt.tight_layout()
+plt.show()
+``` 
+![loss_plot](./3_4/loss_plot.png)
+![prediction_plot](./3_4/prediction.png)
+
+### Sigmoid
+適用時機：
+- 二元分類問題的**輸出層**（因為輸出範圍是 0~1，適合表示機率）
+- 需要將輸出限制在 0~1 之間的情境
+- 較淺的網路（1-2層）
+
+不建議用在：
+- 深層網路的中間層（因為容易發生梯度消失）
+- 需要快速訓練的模型（因為計算exponential較慢）
+- 對稱數據的問題（因為不是零中心化）
+
+### ReLU
+適用時機：
+- 深層網路的**隱藏層**（現代深度學習最常用）
+- CNN（卷積神經網路）
+- 需要快速訓練的大型網路
+- 稀疏激活是可接受的場景
+
+主要優點：
+- 計算簡單快速
+- 能緩解梯度消失問題
+- 能產生稀疏的表示（部分神經元輸出為0）
+
+### Tanh
+適用時機：
+- 需要零中心化輸出的場景（輸出範圍-1~1）
+- RNN（循環神經網路）的隱藏層
+- 數據本身是歸一化/標準化的情況
+- 需要較強的梯度在接近零的區域
+
+實際應用建議：
+1. **常見的最佳實踐組合**：
+```python
+class NeuralNetwork:
+    def __init__(self):
+        self.hidden_activation = ReLU    # 隱藏層使用ReLU
+        self.output_activation = Sigmoid  # 二分類輸出層使用Sigmoid
+```
+
+2. **根據任務選擇**：
+- 分類問題：輸出層用Sigmoid（二分類）或Softmax（多分類）
+- 回歸問題：輸出層可以不用激活函數
+- 特徵提取：中間層優先使用ReLU
+
+3. **特殊情況**：
+- 處理序列數據（如RNN）：優先考慮Tanh
+- 處理圖像數據（如CNN）：優先考慮ReLU
+- 如果ReLU表現不佳：可以嘗試LeakyReLU或ELU
+
+### 其它變體
+1. Leaky ReLu
++ 適用時機：
+    + 當標準ReLU出現大量"死亡"神經元時
+    + 需要保留負值信息的場景
+    + 訓練初期希望網絡快速收斂
+```python
+    f(x) = x if x > 0 else αx # (α通常為0.01)
+```
+
+2. ELU (Exponential Linear Unit)
++ 適用時機：
+    + 深層網絡需要更強的正則化
+    + 對噪聲較敏感的任務
+    + 需要更快收斂速度的場景
+```python
+    f(x) = x if x > 0 else α(exp(x) - 1)
+```
+
+3. SELU (Scaled ELU)
++ 適用時機：
+    + 深層全連接網絡
+    + 需要自歸一化特性的場景
+    + 希望避免額外的批標準化層
+```python
+    f(x) = λ(x if x > 0 else α(exp(x) - 1))
+```
+
+4. GELU(Gaussian Error Linear Unit)
++ 適用時機：
+    + Transformer架構
+    + BERT等預訓練模型
+    + 需要考慮輸入不確定性的場景
+```python
+    f(x) = x * P(X ≤ x)
+```
+
+5. Swish
++ 適用時機：
+    + 深層模型
+    + 需要更好泛化性能的場景
+    + 計算資源充足的情況
+```python
+    f(x) = x * sigmoid(βx)
+```
+
+
+### Summary
+1. 先嘗試 ReLU：
+    + 最簡單且通常效果不錯
+    + 計算效率高
+    + 容易優化
+
+2. 如果遇到問題，按順序嘗試：
+    + Dead ReLU問題 → Leaky ReLU
+    + 需要自歸一化 → SELU
+    + 用於Transformer → GELU
+    + 追求極致性能 → Swish
+
+3. 特殊情況：
+    + 需要處理時序數據 → ELU或SELU
+    + 計算資源受限 → 堅持使用ReLU
+    + 特別關注梯度流動 → Leaky ReLU或ELU
+
+## 優化器(Optimizers)
++ 優化器是 backpropagation 時使用的更新策略，常見的優化器有：
+    ### 隨機梯度下降 SGD(Stochastic Gradient Descent)
+    + 最佳基本的優化器
+    + 適用時機：
+        + 數據量大且資源有限
+        + 問題較簡單
+        + 需要較好的泛化性能
+    ```python
+    class Optimizer:
+        def __init__(self, learning_rate=0.01):
+            self.lr = learning_rate
+
+        def update(self, params, grads):
+            raise NotImplementedError
+    
+    class SGD(Optimizer):
+        def update(self, params, grads):
+            for param, grad in zip(params, grads):
+                param -= self.lr * grad
+            return params
+    ```
+
+    ### 動量 Momemtum
+    + 加入動量項(動態調整學習率)，幫助越過局部最小值
+    + 適用時機：
+        + 梯度下降震盪嚴重時
+        + 需要加速收斂
+        + 有較多局部最小值時
+
+    ```python
+    class Momemtum(Optimizer):
+        def __init__(self, learning_rate=0.01, momemtum=0.9):
+            super().__init__(learning_rate)
+            self.momemtum = momemtum
+            self.velocities = None
+
+        def update(self, params, grades):
+            if self.velocities is None:
+                self.velocities = [np.zeros_like(param) for param in params]
+
+            for i (param, grad) in enumerate(zip(params, grads)):
+                self.velocities[i] = self.momentum * self.velocities[i] - self.lr * grad
+                param += self.velocities[i]
+            return params
+    ```
+
+    ### 自適應學習率 RMSProp
+    + 動態調整學習率
+    + 使用時機：
+        + 處理非平穩問題
+        + RNN訓練
+        + 梯度稀疏的問題
+    ```python
+    class RMSProp(Optimizer):
+        def __init__(self, learning_rate=0.01, decay_rate=0.09, epsilon=1e-8):
+            super().__init__(learning_rate)
+            self.decay_rate = decay_rate
+            self.epsilon = epsilon
+            self.cache = None
+        
+        def update(self, params, grads):
+            if self.cache is None:
+                self.cache = [np.zeros_like(param) for param in params]
+            
+            for i, (param, grad) in enumerate(zip(params, grads)):
+                self.cache[i] = self.decay_rate * self.cache[i] + (1 - self.decay_rate) * grad ** 2
+                param -= self.lr * grad / (np.sqrt(self.cache[i]) + self.epsilon)
+            return params
+    ```
+
+    ### Adam
+    + 結合Momentum和RMSprop的優點
+    + 使用時機：
+        + 深度學習的默認選擇
+        + 需要快速收斂
+        + 大多數問題
+    ```python
+    class Adam(Optimizer):
+    def __init__(self, learning_rate=0.01, beta1=0.9, beta2=0.999, epsilon=1e-8):
+        super().__init__(learning_rate)
+        self.beta1 = beta1
+        self.beta2 = beta2
+        self.epsilon = epsilon
+        self.m = None
+        self.v = None
+        self.t = 0
+    
+    def update(self, params, grads):
+        if self.m is None:
+            self.m = [np.zeros_like(param) for param in params]
+            self.v = [np.zeros_like(param) for param in params]
+        
+        self.t += 1
+        for i, (param, grad) in enumerate(zip(params, grads)):
+            self.m[i] = self.beta1 * self.m[i] + (1 - self.beta1) * grad
+            self.v[i] = self.beta2 * self.v[i] + (1 - self.beta2) * grad**2
+            
+            m_hat = self.m[i] / (1 - self.beta1**self.t)
+            v_hat = self.v[i] / (1 - self.beta2**self.t)
+            
+            param -= self.lr * m_hat / (np.sqrt(v_hat) + self.epsilon)
+        return params
+    ```
+    ![optimizer](./3_4/optimizer.png)
+    
+    ### Summary
+    + 首選Adam：
+    ```python
+    optimizer = Adam(learning_rate=0.001, beta1=0.9, beta2=0.999)
+    ```
+
+    + 如果模型較大：
+    ```python
+    optimizer = AdamW(learning_rate=0.001, weight_decay=0.01)
+    ```
+
+    + 如果需要更好的泛化性能：
+    ```python
+    optimizer = SGD(learning_rate=0.01, momentum=0.9)
+    ```
