--- a/content/leetcode_list/sliding_window_dblptr/1423.md
+++ b/content/leetcode_list/sliding_window_dblptr/1423.md
@@ -20,6 +20,7 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowCodeCopyButtons: true
 ---
++ 難度分: 1574
 + 這題同樣是定長度的 sliding window，但要透過一點轉換，變成求 `window = n - k` 的最小和
 ```cpp
 class Solution {
