--- a/content/leetcode_list/sliding_window_dblptr/1461.md
+++ b/content/leetcode_list/sliding_window_dblptr/1461.md
@@ -20,6 +20,7 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowCodeCopyButtons: true
 ---
++ 難度分: 1504
 + 比較簡單的解法，使用 unordered_set 
 ```cpp
 class Solution {
