--- a/content/leetcode_list/sliding_window_dblptr/2090.md
+++ b/content/leetcode_list/sliding_window_dblptr/2090.md
@@ -20,6 +20,7 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowCodeCopyButtons: true
 ---
++ 難度分: 1358
 ![sample](https://assets.leetcode.com/uploads/2021/11/07/eg1.png)
 + 這題一樣是定長度的 sliding window，但要做一下轉換，半徑為 `k`，代表 window_size 為 `2k+1`。
 ```cpp
