--- a/content/leetcode_list/sliding_window_dblptr/2379.md
+++ b/content/leetcode_list/sliding_window_dblptr/2379.md
@@ -20,6 +20,7 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowCodeCopyButtons: true
 ---
++ 難度分: 1360
 + 定長度的 sliding window，秒殺
 ```cpp
 class Solution {
