--- a/content/leetcode_list/sliding_window_dblptr/2841.md
+++ b/content/leetcode_list/sliding_window_dblptr/2841.md
@@ -20,6 +20,7 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowCodeCopyButtons: true
 ---
++ 難度分: 1546
 + 定長度的 sliding window，搭配對 window 檢查是否滿足條件
 ```cpp
 class Solution {
