--- a/content/leetcode_list/sliding_window_dblptr/2134.md
+++ b/content/leetcode_list/sliding_window_dblptr/2134.md
@@ -1,5 +1,5 @@
 ---
-title: "[LeetCode] 1297. Maximum Number of Occurrences of a Substring"
+title: "[LeetCode] 2134. Minimum Swaps to Group All 1's Together II"
 date: 2022-10-26T12:00:00+08:00
 tags: ["Leetcode"]
 draft: false
@@ -20,41 +20,29 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowCodeCopyButtons: true
 ---
-+ 這題的 minSize 和 maxSize 在 26 以內，範圍不會太大，可以用定長度的 sliding window 硬解。
++ 難度分: 1748
++ 遇到 circular 的問題都可以換位思考，這題可以想成「min swaps to group all 1」或「min swaps to group all 0」
 ```cpp
 class Solution {
 public:
-    int maxFreq(string s, int maxLetters, int minSize, int maxSize) {
-        int res = 0;
-        for (int i = minSize; i <= maxSize; i++) {
-            res = max(res, maxFreqWithWindowSize(s, maxLetters, i));
-        }
-        return res;
+    int minSwaps(vector<int>& nums) {
+        int n = nums.size();
+        int k = accumulate(nums.begin(), nums.end(), 0);
+        return min(minSwapsHelper(nums, 1, k), minSwapsHelper(nums, 0, n-k));
     }
-    int maxFreqWithWindowSize(string& s, int th, int k) {
-        int n = s.size();
-        int cnt[26];
-        memset(cnt, 0, sizeof(cnt));
-        int uq = 0;
-        int res = 0;
-        unordered_map<string, int> map;
+    int minSwapsHelper(vector<int>& nums, int target, int k) {
+        int n = nums.size();
+        int curr = 0;
         for (int i = 0; i < k; i++) {
-            if (cnt[s[i]-'a']++ == 0) uq++;
+            if (nums[i] == target) curr++;
         }
-        if (uq <= th) {
-            map[s.substr(0, k)]++;
-            res = 1;
-        };
+        int cnt = curr;
         for (int i = k; i < n; i++) {
-            if (cnt[s[i]-'a']++ == 0) uq++;
-            if (--cnt[s[i-k]-'a'] == 0) uq--;
-            if (uq <= th) {
-                string t = s.substr(i-k+1, k);
-                res = max(res, ++map[t]);
-            }
+            if (nums[i] == target) curr++;
+            if (nums[i-k] == target) curr--;
+            cnt = max(cnt, curr);
         }
-        return res;
+        return k - cnt;
     }
 };
-
 ```
