--- a/content/AI/3_6.md
+++ b/content/AI/3_6.md
@@ -128,7 +128,7 @@ history = model.fit(
 )
 ```
 
-## 驗證資料
+## 6. 驗證資料
 + 通常我們會將資料分為「訓練集」與「驗證集」，因為我們的目的並非只在訓練資料上表現良好，也需要在面對新資料時，有良好的預測。
 ```python
 model = keras.Sequential([keras.layers.Dense(1)])
@@ -155,3 +155,19 @@ model.fit(
 	validation_data=(val_inputs, val_targets0)
 )
 ```
+
++ 若訓練結束後，若想用特定資料來計算驗證損失和驗證指標值，可以使用 `evaluate()` 方法。
+```python
+loss_and_metrics = model.evaluate(val_inputs, val_targets, batch_size=128)
+```
+
+## 7. 推論(Inference)
++ 模型訓練好後，要拿寫對新資料進行預測，這個過程就稱為**推論(inference)**。
+	+ 對所有的資料一次進行推論
+	```python
+	predictions = model(new_inputs)
+	```
+	+ 對小批次的資料進行預測
+	```python
+	predictions = model.predict(new_inputs, batch_size=128)
+	```
