add logistic classifier

--- a/content/AI/3_4.md
+++ b/content/AI/3_4.md
@@ -4,7 +4,7 @@ date: 2024-12-19T15:01:12+08:00
 tags: ["AI"]
 draft: false
 Categories: AI
-description: "The target of machine learning"
+description: "The introduction to linear regression"
 author: "Rain Hu"
 showToc: true
 TocOpen: true
