--- a/content/AI/3_5.md
+++ b/content/AI/3_5.md
@@ -323,3 +323,50 @@ $$
         - \\(y_i\\) 是第 i 個樣本的真實標籤（0或1）
         - \\(f_{w,b}(x_i)\\) 是模型對第 i 個樣本的預測值（介於0和1之間）
         - \\(\frac{1}{n}\\) 是為了取平均
+    
+## 二元分類 v.s. 線性迴歸
+$$
+    \begin{array}{c|c|c}
+        &\text{Logistic Regression}&\text{Linear Regression}\\\\\hline
+        \text{function}&f_{w,b}(x)=\sigma(\sum_i w_ix_i+b)&f_{w,b}(x)=\sum_i w_ix_i+b\\\\\hline
+        \text{loss function}&L(f)=\sum_iC(f(x_i),\hat{y}_i)&L(f)=\frac{1}{2}\sum_i(f(x_i)-\hat{y}_i)^2\\\\\hline
+        \text{update}&w_i=w_i-\eta\sum_i (f(x_i)-\hat{y}_i)x_i&w_i=w_i-\eta\sum_i (f(x_i)-\hat{y}_i)x_i\\\\
+    \end{array}
+$$
++ 可以發現 Linear Regression 與 Logistic Regression 基本上是差不多的作法，差別是 Logistic 使用了 sigmoid function，在 loss function 的部分使用了二元交叉熵。
++ 那為何 Logistic Regression 不使用 MSE 呢？ 用微分會發現
+$$
+    \frac{\partial L(f)}{\partial w_i}=2(f_{w,b}(x)-\hat{y}f_{w,b}(x)(1-f_{w,b}(x)))x_i
+$$
++ \\(\hat{y}_i=0或1\\)，在 \\(f(x_i)=0或1\\)時，\\(\frac{\partial L}{\partial w_i}皆=0\\)，換言之在接近 target，與相當遠離 target 的地方，梯度都為 0，也就是說使用 MSE 會有梯度遺失的問題。
+![mse v.s. ce](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*iO6LSBu3kRYJeOFO7_Rd2A.gif)
+
+## Discriminative v.s. Generative
++ 我們先前採用高斯模型，並透過找尋最佳的 \\(\mu\\) 與 \\(\Sigma\\) 來找到最佳的高斯分布密度方程式的方法稱為 **Generative**，那既然我們發現其實
+$$
+    z=(\mu_A-\mu_B)^T\Sigma^{-1}\red{x}-\frac{1}{2}(\mu_A)^T(\Sigma_A)^{-1}\mu_A+\frac{1}{2}(\mu_B)^T(\Sigma_B)^{-1}\mu_B+\ln\frac{N_A}{N_B}
+$$
+符合了 \\(z=w^Tx+b\\) 的 pattern，那能否直接代入 `wx+b` 來求最佳的 \\(w\\) 與 \\(b\\) 呢？答案是可以的，這種方法就稱為 Discriminative 的方法。
++ 那這兩種方法求出來的方程式會一樣嗎？答案是不一樣。主要原因在於這兩種方法的目標函數(objective function)不同：
+    + 判別式方法(Discriminative)：
+        + 直接學習後驗機率 P(y|x)
+        + 目標函數是最大化條件似然(conditional likelihood)
+        + 損失函數通常是交叉熵(cross entropy)或負對數似然
+        + 只關注如何根據輸入特徵x預測類別y
+    + 生成式方法(Generative)：
+        + 學習聯合機率分布 P(x,y) = P(x|y)P(y)
+        + 目標函數是最大化聯合似然(joint likelihood)
+        + 需要同時建模特徵的分布P(x|y)和類別的先驗機率P(y)
+        + 不僅要預測y，還要能夠"生成"符合該類別的特徵x
++ 一般來說：
+    + 當訓練數據充足時，判別式模型表現較好，因為它直接優化分類效果
+    + 當訓練數據較少時，生成式模型可能表現更好，因為它對數據分布有更強的假設
+    + 需要注意的是，這兩種方法的參數更新規則和收斂性質也會不同，因此即使使用相同的學習率和初始值，最終得到的結果也會有所差異。
+
+## Logistic Regression 的限制
++ 並不能表示所有的情況，例如 xor gate。
+![xorgate](./3_5/xor.png)
++ 因為我們無法找到一個線性模型來有效的描述 xor gate。
++ 在這種情況下，我們需要嘗試做 **Feature Transformation**，將 xor gate 的 input & output 做特殊的轉換，使線性模型可以描述
+![feature_transformation](./3_5/feature_transformation.png)
++ 事實上這種作法就是在 output layer 前，加一個 **hidden layer** 作 feature transformation。一個\\(z=\sigma(wx_i+b)\\) 被我們稱為一個 neural node，由一群 neural node 組成的模型，即稱為 **neural network**。
