--- a/content/AI/4_1.md
+++ b/content/AI/4_1.md
@@ -20,8 +20,6 @@ ShowPostNavLinks: true
 ShowCodeCopyButtons: true
 ---
 
-
-
 ## 1. 認識 IMDB 資料集
 + 透過 tensorflow 引入資料集
     + **參數**
@@ -34,11 +32,10 @@ ShowCodeCopyButtons: true
         + `oov_char`: 整數。詞彙表外字元。由於 num_words 或 skip_top 限制而被刪除的詞彙將替換為此字元。
         + `index_from`: 整數。使用此索引和更高索引為實際詞彙編制索引。
     + **回傳值**
-        + Numpy 陣列的 tuple：`(x_train, y_train), (x_test, y_test)`。
+        + Numpy 陣列的 tuple: `(x_train, y_train), (x_test, y_test)`。
     + 其中資料集包含了 88585 個相異單字，有很大的單字甚至只有出現一次，這數字對訓練而言非常龐大，且對分類任務沒什麼幫助，所以我們只保留 10000 個最常出現的單字
     ```python
     from tensorflow.keras.datasets import imdb
-
     (train_images, train_labels), (test_images, test_labels) = imdb.load_data(num_words=10000)
     ```
 + IMDb (Internet Movie Database) 是一個與影視相關的網路資料庫，IMDB 資料集就是從 IMDb 網站收集而來的資料。資料包含了 50000 筆評論，其中包含了 50% 的正面評論與 50% 的負面評論。
@@ -129,14 +126,14 @@ ShowCodeCopyButtons: true
 + 我們的輸入資料是向量、標籤為 0 與 1，我們可以使用一個密集層堆疊架構搭配 relu 函數。
 + 我設計以下的三層神經網路架構：  
     \\(
-        \begin{array}{cc}
+        \begin{array}{ccc}
         \text{輸入(向量化文字)}\\\\
         \downarrow\\\\
-        \boxed{\text{密集(單元=16)}} & \text{hidden layer}\\\\
+        \boxed{\text{密集(單元=16)}} & \text{relu} & \text{hidden layer}\\\\
         \downarrow\\\\
-        \boxed{\text{密集(單元=16)}} & \text{hidden layer}\\\\
+        \boxed{\text{密集(單元=16)}} & \text{relu} & \text{hidden layer}\\\\
         \downarrow\\\\
-        \boxed{\text{密集(單元=1)}} & \text{output layer}\\\\
+        \boxed{\text{密集(單元=1)}} & \text{softmax} & \text{output layer}\\\\
         \downarrow\\\\
         \text{輸出(預測值)}\\\\
         \end{array}
@@ -150,6 +147,27 @@ ShowCodeCopyButtons: true
         layers.Dense(16, activation='relu'),
         layers.Dense(1, activation='sigmoid')
     ])
+    ```
+    + compile
+    ```python
+    model.compile(optimizer='rmsprop',
+                  loss='binary_crossentropy',
+                  metrics=['accuracy'])
+    ```
+    + 建立驗證集
+    ```python
+    x_val = x_train[:10000]
+    partial_x_train = x_train[10000:]
+    y_val = y_train[:10000]
+    partial_y_train = y_train[10000:]
+    ```
+    + 訓練模型
+    ```python
+    history = model.fit(partial_x_train,
+                        partial_y_train,
+                        epochs=20
+                        batch_size=512,
+                        validation_data=(x_val, y_val))
     ```
     + 繪製訓練與驗證圖
     ```python
