--- a/content/AI/5_1.md
+++ b/content/AI/5_1.md
@@ -206,6 +206,108 @@ plt.show()
 
 ### 以內插法作為普適化的基礎
 + 深度學習的普適化能力，很大程度上依賴於模型能夠在訓練數據的流形上進行合理的內插。讓我們通過實驗來比較**流形內插**和**線性內插**的差異：
+![interpolation](./5_1/interpolation.png)
+
+{{< togb "內插法程式" >}}
+```python
+import tensorflow as tf
+from tensorflow.keras.datasets import mnist
+import numpy as np
+import matplotlib.pyplot as plt
+
+# 載入 MNIST 數據集
+(x_train, y_train), _ = mnist.load_data()
+x_train = x_train.astype('float32') / 255.
+x_train_reshaped = x_train.reshape(-1, 28, 28, 1)
+
+# 建立編碼器
+encoder_input = tf.keras.Input(shape=(28, 28, 1))
+x = tf.keras.layers.Flatten()(encoder_input)
+x = tf.keras.layers.Dense(128, activation='relu')(x)
+x = tf.keras.layers.Dense(64, activation='relu')(x)
+latent = tf.keras.layers.Dense(32, activation='relu')(x)
+encoder = tf.keras.Model(encoder_input, latent, name='encoder')
+
+# 建立解碼器
+decoder_input = tf.keras.Input(shape=(32,))
+x = tf.keras.layers.Dense(64, activation='relu')(decoder_input)
+x = tf.keras.layers.Dense(128, activation='relu')(x)
+x = tf.keras.layers.Dense(784, activation='sigmoid')(x)
+decoder_output = tf.keras.layers.Reshape((28, 28, 1))(x)
+decoder = tf.keras.Model(decoder_input, decoder_output, name='decoder')
+
+# 建立完整的自編碼器
+autoencoder_input = tf.keras.Input(shape=(28, 28, 1))
+encoded = encoder(autoencoder_input)
+decoded = decoder(encoded)
+autoencoder = tf.keras.Model(autoencoder_input, decoded, name='autoencoder')
+
+# 編譯和訓練
+autoencoder.compile(optimizer='adam', loss='binary_crossentropy')
+history = autoencoder.fit(x_train_reshaped, x_train_reshaped,
+                         epochs=20,
+                         batch_size=256,
+                         shuffle=True,
+                         validation_split=0.2)
+
+# 選擇兩張不同的數字圖片
+img1 = x_train_reshaped[y_train == 2][0:1]  # 選擇一個 2
+img2 = x_train_reshaped[y_train == 7][0:1]  # 選擇一個 7
+
+# 生成線性內插
+def linear_interpolation(img1, img2, num_steps=5):
+    alphas = np.linspace(0, 1, num_steps)
+    images = []
+    for alpha in alphas:
+        interpolated = img1 * (1 - alpha) + img2 * alpha
+        images.append(interpolated[0])
+    return np.array(images)
+
+# 生成流形內插
+def manifold_interpolation(img1, img2, num_steps=5):
+    # 獲取潛在表示
+    latent1 = encoder.predict(img1)
+    latent2 = encoder.predict(img2)
+    
+    # 在潛在空間中內插
+    alphas = np.linspace(0, 1, num_steps)
+    images = []
+    for alpha in alphas:
+        interpolated_latent = latent1 * (1 - alpha) + latent2 * alpha
+        # 使用解碼器重建圖片
+        decoded_img = decoder.predict(interpolated_latent)
+        images.append(decoded_img[0])
+    return np.array(images)
+
+# 生成內插序列
+linear_imgs = linear_interpolation(img1, img2)
+manifold_imgs = manifold_interpolation(img1, img2)
+
+# 顯示結果
+plt.figure(figsize=(15, 6))
+
+# 顯示線性內插
+plt.subplot(2, 1, 1)
+plt.title('linear interpolation')
+for i in range(5):
+    plt.subplot(2, 5, i + 1)
+    plt.imshow(linear_imgs[i].reshape(28, 28), cmap='gray')
+    plt.axis('off')
+
+# 顯示流形內插
+plt.subplot(2, 1, 2)
+plt.title('manifold interpolation')
+for i in range(5):
+    plt.subplot(2, 5, i + 6)
+    plt.imshow(manifold_imgs[i].reshape(28, 28), cmap='gray')
+    plt.axis('off')
+
+plt.tight_layout()
+plt.show()
+```
+{{< toge >}}
++ 換言之，因為新的資料可以透過現有的資料點內插而得，代表我們可以將新資料點連結到流形上相近的其它點，進而理解這些從未見過的資料點。也就是說我們可以靠空間的有限樣本來理解空間的整體性，做法是透過內插法來填滿其中的空白。以下是我的想像示意圖。
+![imagine](./5_1/imagine.png)
 
 ### 為何深度學習能運作
 + 流形假說幫助我們理解為什麼深度學習能夠有效運作：
@@ -217,3 +319,16 @@ plt.show()
     4. 歸納能力：模型的普適化能力很大程度上來自於它能夠在流形上進行合理的內插，而不是簡單地記住訓練數據。
 
 + 這個實驗展示了為什麼簡單的線性內插會產生模糊或不自然的結果，而流形內插能產生更真實的過渡狀態。這也說明了深度學習模型不僅僅是在記憶數據，而是真正學習到了數據的內在結構。
+
+### 訓練資料的處理
++ 儘管深度學習適合流形學習(manifold learning)，但普適化能力主要還是取決於資料的自然結構，而非模型的特性。只有當資料流形中的點可以內插，才有可能進行普適化。資料中的特徵愈清晰、愈沒有雜訊，普適化的能力才會愈好。這是因為輸入空間變得更簡單且有著更好的結構。
++ 故如果要提升普適化表現，資料篩選(data curation)和特徵工程(feature engineering)就尤為重要。
++ 以下同樣也是我的想像示意圖
+![screening](./5_1/screening.png)
+
++ 模型若要表現良好，最好可以在輸入空間中密集抽樣(dense sampling)，並用抽樣出的資料來訓練模型。所謂密集抽樣是指訓練資料應該密集地涵蓋整個輸入空間的流形附近，特別是**決策邊界**附近
+![dense_sampling](./5_1/dense_sampling.png)
+
++ 若想要模型表示得好，就得提供更多或更多的資料，那麼輸入資料的流形可以覆蓋更多、更密集的範圍，使得普適化能力更好。由於模型只能單純地在訓練樣本間進行內插，因此我們要讓模型可以透過簡單正確地內插，這一切將取決於模型的設計架構與訓練的資料。
++ 當無法取得更多資料時，我們能做的就是調降模型所能容納的資訊，或是在模型的擬合曲線上加入一些限制。讓模型只能記憶很有限或常見的樣態，在優化過程中強迫模型專注於最突出的樣態，這樣就有可能提升普適化能力。這種避免 overfitting 的方法叫作**常規化(regularization)**
+![regularization](./5_1/regularization.png)
